k8s/prometheus+grafana/yaml_install/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: grafana
  name: grafana
  namespace: kube-ops
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 39002
  selector:
     app: grafana
