k8s/prometheus+grafana/yaml_install/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: grafana
  name: grafana-ingress
  namespace: kube-ops
spec:
  rules:
  - host: grafana.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
